# deep-tree-echo-rkwv

./: .gitignore  .gitmodules  =2.0.0  CMakeLists.txt  PARENTHESES_BOOTSTRAP_README.md  PHASE3_IMPLEMENTATION_COMPLETE.md  README.md  RWKV_CPP_INTEGRATION.md  RWKV_LM_INTEGRATION_GUIDE.md  SPENCER_BROWN_VISUAL.md  build_rwkv_cpp.sh  check.md  demo_spencer_brown.py  test_integration.py  test_parentheses_bootstrap.py  test_rwkv_cpp_integration.py
.github/workflows/: ci.yml
config/: external_repositories.yml
docs/: EchoLisp_README.md  RWKV_CPP_INTEGRATION.md
docs/architecture/: EchoSpace.md  TOROIDAL_COGNITIVE_SYSTEM.md
infrastructure/monitoring/: prometheus.yml
scripts/: deploy.sh
src/: adaptive_learning.py  analytics_demo.py  analytics_integration_example.py  app.py  auth_middleware.py  cognitive_reflection.py  create_test_model.py  demo_echo_lisp_api.py  demo_echospace.py  demo_enhanced_toroidal.py  demo_external_rwkv_integration.py  demo_iteration_2.py  demo_persistent_memory.py  demo_rwkv_cpp_integration.py  demo_rwkv_integration.py  demo_rwkv_lm_integration.py  demo_simple_rwkv.py  demo_task_2_6_2_7.py  demo_toroidal_system.py  dual_persona_kernel.py  echo_api_server.py  echo_lisp.py  echo_rwkv_bridge.py  echo_rwkv_bridge_clean.py  enhanced_api_endpoints.py  enhanced_api_server.py  enhanced_caching.py  enhanced_cognitive_demo.py  enhanced_cognitive_integration.py  enhanced_cognitive_methods.py  enhanced_echo_rwkv_bridge.py  enhanced_preference_learning.py  explanation_generation.py  final_api_server.py  final_phase3_validation.py  intelligent_autoscaling.py  performance_testing.py  persistent_memory.py  persistent_memory_foundation.py  phase3_scalability_validation.json  (+46 more)
src/analytics/: README.md  __init__.py  dashboard.py  data_models.py  etl.py  flask_integration.py  integrations.py  processor.py  service.py
src/api/: __init__.py  documentation.py  graphql_api.py  rest_api.py  simple_graphql.py
src/cli/: echo.py
src/cognitive_grammar/: __init__.py  parentheses_bootstrap.py
src/echospace/: __init__.py  consensus.py  core.py  marduk.py  memory.py  namespaces.py  sandbox.py  workflows.py
src/plugins/: base.py
webvm-minimal/: README.md
(+44 files in other folders)
